--- a/src/App.css
+++ b/src/App.css
@@ -2520,6 +2520,12 @@
   gap: 2px;
 }
 
+.tooltip-trigger.delta-block .delta-stacked-mood {
+  display: inline-flex;
+  align-items: center;
+  gap: 2px;
+}
+
 .stat-block .label .tooltip-trigger {
   margin-left: 6px;
 }
