--- a/src/App.css
+++ b/src/App.css
@@ -1713,7 +1713,7 @@ button.toggle-group__btn--disabled:disabled {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 8px;
+  gap: 4px;
 }
 
 .badge-status-icon {
@@ -1727,6 +1727,7 @@ button.toggle-group__btn--disabled:disabled {
   width: 44px;
   height: 44px;
   object-fit: contain;
+  margin-right: -4px;
 }
 
 .badge-title {
