--- a/src/App.css
+++ b/src/App.css
@@ -91,6 +91,11 @@
   border-color: var(--selected-border);
 }
 
+.tab-button:focus:not(:focus-visible) {
+  outline: none;
+  box-shadow: none;
+}
+
 .tab-icon {
   display: inline-flex;
   width: 18px;
