--- a/src/App.css
+++ b/src/App.css
@@ -2123,6 +2123,7 @@ button.toggle-group__btn--disabled:disabled {
 .insights-intro {
   display: grid;
   gap: 16px;
+  margin-bottom: 10px;
 }
 
 .insights-intro__header {
